# miStudio

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  SAE_TRAINING_BUG_FIX_SUMMARY.md  STARTUP.md  docker-compose.dev.yml  docker-compose.hub.yml  docker-compose.prod.yml  docker-compose.workers.yml  docker-compose.yml  mistudio  restart-mistudio.sh  start-docker.sh  start-mistudio.sh  stop-docker.sh  stop-mistudio.sh
backend/: .dockerignore  .env.example  .gitignore  CELERY_WORKERS.md  Dockerfile  MULTI_TOKENIZATION_REFACTORING_PLAN.md  README.md  TEXT_CLEANING_IMPLEMENTATION_COMPLETE.md  TEXT_CLEANING_TESTING_WORKFLOW.md  TRAINING_DELETION_FIX.md  alembic.ini  audit_migrations.py  celery.sh  check_migrations.py  check_type_mismatches.py  cleanup_orphans.py  cleanup_prime_token_duplicates.py  docker-entrypoint.sh  example_prompt.txt  find_column_gaps.py  fix_dataset_paths.py  pyproject.toml  requirements.txt  restore_extraction.py  start-celery-worker.sh  test_dual_label_parsing.py  test_dual_labels.py  test_preview_manual.json  test_text_cleaning.py  test_vectorization_manual.py  typescript
backend/alembic/: env.py
backend/alembic/versions/: 04b58ed9486a_add_dataset_tokenizations_table.py  075931c81831_replace_extraction_filters_with_six_.py  09d85441a622_create_training_templates_table.py  118f85d483dd_create_datasets_table.py  126732716f92_allow_multiple_extractions_per_training.py  1b09fdca19e8_add_default_partition_to_feature_.py  20251113010218_add_labeling_prompt_templates.py  2cc2cd5c8052_add_micro_batch_size_to_extraction_.py  2d4f3b18cc10_add_layer_idx_to_training_metrics.py  2e1feb9cc451_migrate_existing_tokenizations_to_new_.py  456bdad91d81_add_indexes_to_activation_extractions_.py  4665467878d9_add_task_queue_table.py  4a1844011c28_expand_encoder_type_constraint.py  5523f486e7f0_create_training_tables.py  56ee0619fe2e_add_layer_index_to_extraction_jobs.py  578abb790b30_add_token_filter_customization_fields_.py  678f7e8bbeb6_cleanup_duplicate_prime_tokens.py  6819dd3caeb3_create_labeling_jobs_table.py  6d0a793c77b1_add_poor_quality_detection_to_labeling_.py  7282abcac53a_remove_tokenization_fields_from_datasets.py  76918d8aa763_create_feature_discovery_tables.py  77cc0d1b2f7d_add_context_labeling_template_fields.py  79dd2387ebeb_add_external_sae_id_to_extraction_and_.py  7a8b9c0d1e2f_add_missing_label_source_enum_values.py  7aa4e03d0d11_create_prompt_templates_table.py  7d3539aaf247_add_nlp_analysis_persistence_columns.py  7d94bbc742c5_add_openai_compatible_fields.py  8131e563f5fe_add_extraction_unique_constraint.py  89f3123799c1_add_gpu_id_to_activation_extractions.py  8b9c0d1e2f3a_update_mistudio_template_15_token_limit.py  90faea1e38d0_update_anthropic_template_improved_.py  92326e3cf5a7_add_save_requests_sample_rate_to_.py  92780ad64734_add_fvu_column_to_training_metrics.py  9af302845be9_add_export_format_to_labeling_jobs.py  9b02b81e6908_update_sae_format_to_community_standard.py  9c0d1e2f3a4b_add_max_length_to_tokenizations.py  9dc725cba2ad_update_anthropic_template_add_negative_.py  9f9a41208c22_add_context_window_columns.py  a04bee8d5640_add_jumprelu_to_encoder_type_constraint.py  a1b2c3d4e5f6_add_tokenization_filter_fields.py  (+26 more)
backend/docs/: TODO_UI_Improvements_2025-11-05.md  checkpoint_service_enhancement.md  prompt_specificity_comparison.md
backend/scripts/: cleanup_old_checkpoints.py  migrate_saes_to_community_format.py  seed_default_labeling_template.py  verify_schema.py
backend/services/ollm_server/: Dockerfile  __init__.py  config.py  inference.py  main.py  models.py  requirements.txt
backend/src/: main.py
backend/src/core/: __init__.py  celery_app.py  config.py  database.py  deps.py  websocket.py
backend/src/db/: __init__.py  schema_validator.py
backend/src/ml/: __init__.py  community_format.py  forward_hooks.py  model_loader.py  sparse_autoencoder.py  transformers_compat.py
backend/src/models/: __init__.py  activation_extraction.py  checkpoint.py  dataset.py  dataset_tokenization.py  external_sae.py  extraction_job.py  extraction_template.py  feature.py  feature_activation.py  feature_analysis_cache.py  feature_dashboard.py  labeling_job.py  labeling_prompt_template.py  model.py  neuronpedia_export.py  prompt_template.py  steering_experiment.py  task_queue.py  training.py  training_metric.py  training_template.py
backend/src/schemas/: __init__.py  dataset.py  extraction.py  extraction_template.py  feature.py  labeling.py  labeling_prompt_template.py  metadata.py  model.py  neuronpedia.py  prompt_template.py  sae.py  steering.py  task_queue.py  training.py  training_template.py
backend/src/scripts/: fix_stuck_dataset.py  test_openai_labeling.py
backend/src/services/: __init__.py  activation_service.py  analysis_service.py  background_monitor.py  checkpoint_service.py  dataset_service.py  extraction_db_service.py  extraction_service.py  extraction_template_service.py  extraction_vectorized.py  feature_service.py  gpu_monitor_service.py  histogram_service.py  huggingface_sae_service.py  improved_steering_prompt.py  labeling_context_formatter.py  labeling_prompt_template_service.py  labeling_service.py  local_labeling_service.py  logit_lens_service.py  model_service.py  neuronpedia_export_service.py  neuronpedia_local_service.py  nlp_analysis_service.py  openai_labeling_service.py  prompt_template_service.py  resource_config.py  sae_converter.py  sae_manager_service.py  specific_labeling_prompt.py  steering_experiments_service.py  steering_resilience.py  steering_service.py  system_monitor_service.py  task_queue_service.py  token_aggregator_service.py  tokenization_service.py  training_service.py  training_template_service.py  training_validator.py
backend/src/utils/: __init__.py  auto_labeling.py  conversation_formats.py  file_utils.py  hf_utils.py  text_cleaning.py  (+4 more)
backend/systemd/: install-services.sh  mistudio-backend.service  mistudio-celery-beat.service  mistudio-celery-worker.service  mistudio.target
backend/tests/: conftest.py  test_checkpoint_deletion.py  test_checkpoint_deletion_standalone.py
(+540 files in other folders)
